* Documentation updates and fixes ({uri-issue}165[#165], {uri-issue}166[#166], {uri-issue}172[#172])
* Added `--disable-active-clipboard` switch to prevent clipboard request injection
* Added `--no-downgrade` switch to prevent protocol downgrading where possible {uri-issue}189[#189]

=== Bug fixes

* Python 3.8 supported by fixing a logging.Formatter misuse ({uri-issue}176[#176])
* Fixed stack traces in the player when attempting to print strings with ending null character ({uri-issue}182[#182])
* Remove NLA argument from `pyrdp-mitm`.
  It was never supported and thus misleading.

=== Infrastructure

* Added continuous integration leveraging GitHub Actions that builds the docker image and runs an integration test on both Ubuntu and Windows ({uri-issue}194[#194])


== 0.4.1 - 2019-11-03

Now with 100% public docker image!

=== Enhancements

* Improvements to our docker image ({uri-issue}156[#156], {uri-issue}157[#157], {uri-issue}160[#160])
* Logging when Restricted Admin Mode is enabled on clients
* Documentation improvements

=== Bug fixes

* Fixed libGL.so.1 missing in docker image ({uri-issue}138[#138], {uri-issue}159[#159])

=== Release meta

* Released by: Olivier Bilodeau
* Release beer: Archibald's Triple Américaine limited edition from YUL Airport

=== Credits

Thanks to the following people who contributed to this release:

Émilio Gonzalez, Francis Labelle, Olivier Bilodeau, Ondrej Gersl


== 0.4.0 - 2019-09-01

Release just in time for our Derbycon talk!

=== Enhancements

* Add recursive folder download from the PyRDP Player and a queue to download files ({uri-issue}140[#140])
* Add file crawler to automatically download files from the client drive using pattern files ({uri-issue}141[#141])

=== Credits

Thanks to the following people who contributed to this release:

Maxime Carbonneau


== 0.3.0 - 2019-08-31

A special BlackHat USA Arsenal 2019 release!
